src/test/deca/context/invalid/ContextAvecObjet/DeclFields/typeInexistant.deca
// Description:
//    Déclaration d'un champs de type indéfini
//
// Resultats:
//    Erreur contextuelle
//    type inexistant ligne 9

class A {
    protected in x;
}
